--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/badges.css">
+        <link rel="stylesheet" href="rachel724/js/reportcard/css/badges.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -65,7 +66,15 @@
                 <p><a href="instructions.html" class="btn btn-primary btn-large" style="margin-right:15px;">Instructions</a><a href="https://github.com/rileyhilliard/reportcard" class="btn btn-success btn-large" target="_blank">Download via GitHub &raquo;</a></p>
 
             </div>
-
+<div class="report-card treehouse"></div>
+<script>
+$('.report-card.treehouse').reportCard({
+    userName: 'rachel724',
+    site: 'treehouse',
+    badgesAmount: 7
+});
+</script>
+<script src="rachel724/js/reportcard/js/reportcard.js"></script>
             <!-- Example row of columns -->
             <h1>Treehouse</h1>
             <div class="row">
