--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/badges.css">
-        <link rel="stylesheet" href="rachel724/js/reportcard/css/badges.css">
+        <link rel="stylesheet" href="js/reportcard/css/badges.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -65,16 +65,6 @@
                 <p>Welcome to the open source Report Card widget! Right now this project is only compatible with <a href="http://teamtreehouse.com" target="_blank">Treehouse</a>. More coding schools may be added in the future if there is enough demand.</p>
                 <p><a href="instructions.html" class="btn btn-primary btn-large" style="margin-right:15px;">Instructions</a><a href="https://github.com/rileyhilliard/reportcard" class="btn btn-success btn-large" target="_blank">Download via GitHub &raquo;</a></p>
 
-            </div>
-<div class="report-card treehouse"></div>
-<script>
-$('.report-card.treehouse').reportCard({
-    userName: 'rachel724',
-    site: 'treehouse',
-    badgesAmount: 7
-});
-</script>
-<script src="rachel724/js/reportcard/js/reportcard.js"></script>
             <!-- Example row of columns -->
             <h1>Treehouse</h1>
             <div class="row">
@@ -136,7 +126,7 @@ $('.report-card.treehouse').reportCard({
         <script src="js/reportcard.js"></script>
         <script>
             $('.report-card.treehouse').reportCard({
-                userName: 'rileyhilliard',
+                userName: 'rachelaitkens',
                 site: 'treehouse',
                 badgesAmount: 7,
                 tooltips: true
@@ -149,5 +139,6 @@ $('.report-card.treehouse').reportCard({
                 tooltips: true
             });
         </script>
+            <script src="js/reportcard/js/reportcard.js"></script>
     </body>
 </html>
